--- a/KreastoreUser/package.json
+++ b/KreastoreUser/package.json
@@ -15,7 +15,9 @@
     "@react-native-firebase/app": "^12.1.0",
     "@react-native-firebase/auth": "^12.1.0",
     "@react-native-firebase/firestore": "^12.1.0",
+    "@react-native-firebase/storage": "^12.1.0",
     "@react-native-google-signin/google-signin": "^6.0.1",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "native-base": "^3.0.2",
