--- a/KreastoreUser/package.json
+++ b/KreastoreUser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kreastoreuser",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -17,13 +17,17 @@
     "@react-native-firebase/firestore": "^12.1.0",
     "@react-native-firebase/storage": "^12.1.0",
     "@react-native-google-signin/google-signin": "^6.0.1",
+    "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "native-base": "^3.0.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.0.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
