--- a/KreastoreUser/package.json
+++ b/KreastoreUser/package.json
@@ -31,6 +31,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.4",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
