--- a/KreastoreUser/ios/Podfile
+++ b/KreastoreUser/ios/Podfile
@@ -14,6 +14,9 @@ target 'KreastoreUser' do
 
   pod 'react-native-progress-bar-android', :path => '../node_modules/@react-native-community/progress-bar-android'
 
+  pod 'RNCCheckbox', :path => '../node_modules/@react-native-community/checkbox'
+
+
   target 'KreastoreUserTests' do
     inherit! :complete
     # Pods for testing
