--- a/KreastoreUser/package.json
+++ b/KreastoreUser/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.4",
     "@react-native-firebase/app": "^12.1.0",
@@ -30,6 +31,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.4",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
