--- a/KreastoreUser/package.json
+++ b/KreastoreUser/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/progress-bar-android": "^1.0.4",
     "@react-native-firebase/app": "^12.1.0",
@@ -24,10 +25,12 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "native-base": "^3.0.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^5.1.21",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.4",
