--- a/KreastoreUser/package.json
+++ b/KreastoreUser/package.json
@@ -46,6 +46,7 @@
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
     "styled-components": "^5.3.0",
+    "underscore": "^1.13.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
