--- a/KreastoreUser/android/gradle.properties
+++ b/KreastoreUser/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.75.1
+MYAPP_UPLOAD_STORE_FILE=kreastore.keystore
+MYAPP_UPLOAD_KEY_ALIAS=alias_kreastore
+MYAPP_UPLOAD_STORE_PASSWORD=ihsan123
+MYAPP_UPLOAD_KEY_PASSWORD=ihsan123
+
